--- a/style.css
+++ b/style.css
@@ -9,6 +9,24 @@ body {
   background-color: black;
 }
 
-h1 {
-  color: red;
+#quizTitle {
+  color: black;
+  text-shadow: 0px 0px 2px red;
+  -webkit-text-stroke: 2px red;
+  text-align: center;
+  margin-top: 75px;
+  margin-bottom: 75px;
+}
+
+#pictureBox {
+  margin-top: 75px;
+  margin-bottom: 25px;
+  background-color: #212324;
+  min-height: 500px;
+}
+
+#message {
+  text-align:center;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
