--- a/style.css
+++ b/style.css
@@ -3,38 +3,14 @@
   src: url("https://cdn.glitch.com/01b27d37-a07e-4e2e-8caf-659256274937%2FBenguiat%20Bold.ttf?v=1565268317646");
 }
 
-input {
-  color: white;
-}
+input {}
 
-body {
-  font-family: "Strange";
-  color: white;
-  background-color: black;
-}
+body {}
 
-img {
-  height: 400px;
-}
+img {}
 
-#quizTitle {
-  color: black;
-  text-shadow: 0px 0px 2px red;
-  -webkit-text-stroke: 2px red;
-  text-align: center;
-  margin-top: 75px;
-  margin-bottom: 75px;
-}
+#quizTitle {}
 
-#pictureBox {
-  margin-top: 75px;
-  margin-bottom: 25px;
-  background-color: #212324;
-  min-height: 400px;
-}
+#pictureBox {}
 
-#message {
-  text-align:center;
-  margin-top: 25px;
-  margin-bottom: 25px;
-}
+#message {}
