👝🐺 Checkpoint ./changes.txt:574715/228 ./style.css:574715/198

--- a/style.css
+++ b/style.css
@@ -5,11 +5,19 @@
 
 input {}
 
-body {}
+body {
+  background-color:black;
+}
 
-img {}
+img {
+  height: 400px;
+}
 
-#quizTitle {}
+#quizTitle {
+  color: red;
+  font-family: "Strange";
+  text-align: center;
+}
 
 #pictureBox {}
 
