--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
   src: url("https://cdn.glitch.com/01b27d37-a07e-4e2e-8caf-659256274937%2FBenguiat%20Bold.ttf?v=1565268317646");
 }
 
-input {}
+input {
+  color: white;
+  font-size: 2rem;
+}
 
 body {
   background-color:black;
@@ -17,8 +20,15 @@ img {
   color: red;
   font-family: "Strange";
   text-align: center;
+  -webkit-text-stroke: 2px red;
+  -webkit-text-fill-color: black;
+  margin-bottom: 75px;
+  margin-top: 75px;
 }
 
-#pictureBox {}
+#pictureBox {
+  margin-top: 75px;
+  background-color: #222222;
+}
 
 #message {}
