🐴⏳ Checkpoint ./style.css:574715/37

--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ input {
   outline: none;
   border-bottom: 1px solid grey;
   width: 80%;
-  margin: auto;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 body {
@@ -28,7 +29,7 @@ img {
   text-align: center;
   -webkit-text-stroke: 2px red;
   -webkit-text-fill-color: black;
-  margin-bottom: 75px;
+  margin-bottom: 50px;
   margin-top: 75px;
 }
 
